Typo fix / int cast after null check

--- a/src/templates/settings.twig
+++ b/src/templates/settings.twig
@@ -17,7 +17,7 @@
 {{ forms.lightswitchField({
     first: true,
     label: "Auto Track",
-    instructions: "Should elements which have are associated with specific URLs be auto-tracked whenever a user visits the associated URL?",
+    instructions: "Should elements which are associated with specific URLs be auto-tracked whenever a user visits the associated URL?",
     name: 'autoTrack',
     on: settings.autoTrack
 }) }}
